Move to dev.architectury for the group
Signed-off-by: shedaniel <daniel@shedaniel.me>

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ cf_type=beta
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
 base_version=2.0
-maven_group=me.shedaniel
+maven_group=dev.architectury
 
 fabric_loader_version=0.11.3
 fabric_api_version=0.34.8+1.17
