--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.17-pre2
-supported_version=1.17-pre2
+minecraft_version=1.17-rc1
+supported_version=1.17-rc1
 
 cf_type=beta
 
@@ -13,6 +13,6 @@ maven_group=dev.architectury
 
 fabric_loader_version=0.11.3
 fabric_api_version=0.34.8+1.17
-mod_menu_version=2.0.0-beta.5
+mod_menu_version=2.0.0-beta.7
 
 #forge_version=36.0.42
