--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.17-rc1
-supported_version=1.17-rc1
+minecraft_version=1.17
+supported_version=1.17
 
-cf_type=beta
+cf_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -12,7 +12,7 @@ base_version=2.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.11.3
-fabric_api_version=0.34.8+1.17
+fabric_api_version=0.34.9+1.17
 mod_menu_version=2.0.0-beta.7
 
 #forge_version=36.0.42
