Publish the sources properly
Signed-off-by: shedaniel <daniel@shedaniel.me>

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,10 @@ allprojects {
             return changes.toString()
         }
     }
+
+    java {
+        withSourcesJar()
+    }
 }
 
 task licenseFormatAll
