--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "architectury-plugin" version "3.2-SNAPSHOT"
-    id "dev.architectury.loom" version "0.9.0-SNAPSHOT" apply false
-    id 'io.github.juuxel.loom-quiltflower' version '1.1.1' apply false
+    id "dev.architectury.loom" version "0.8.0-SNAPSHOT" apply false
+    id "io.github.juuxel.loom-quiltflower" version "1.1.1" apply false
     id "org.cadixdev.licenser" version "0.5.0"
     id "com.matthewprenger.cursegradle" version "1.4.0" apply false
     id "maven-publish"
@@ -22,10 +22,11 @@ subprojects {
 
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.architectury.minecraft}"
-        mappings loom.layered {
-            officialMojangMappings()
-            crane("dev.architectury:crane:1.17+build.9")
-        }
+        mappings loom.officialMojangMappings()
+//        mappings loom.layered {
+//            officialMojangMappings()
+//            crane("dev.architectury:crane:${rootProject.crane_version}")
+//        }
     }
 }
 
