--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.daemon=false
 
 minecraft_version=1.17
 supported_version=1.17
+crane_version=1.17+build.11
 
 cf_type=release
 
@@ -11,7 +12,7 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=2.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.11.3
+fabric_loader_version=0.11.6
 fabric_api_version=0.34.9+1.17
 mod_menu_version=2.0.0-beta.7
 
