--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,12 @@ allprojects {
         options.release = 16
     }
 
+    javadoc {
+        // Architectury's common javadoc has references to platform code, which cannot be resolved normally.
+        // Let's just skip the errors!
+        failOnError = false
+    }
+
     license {
         header = rootProject.file("HEADER")
 
