Should be fine now, right?

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -107,6 +107,7 @@ curseforge {
             changelogType = "html"
             changelog = releaseChangelog()
             addGameVersion "1.17"
+            addGameVersion "1.17.1"
             addGameVersion "1.17-Snapshot"
             addGameVersion "Java 16"
             addGameVersion "Fabric"
