--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -104,6 +104,7 @@ curseforge {
             changelogType = "html"
             changelog = releaseChangelog()
             addGameVersion "1.17"
+            addGameVersion "1.17.1"
             addGameVersion "Java 16"
             addGameVersion "Forge"
             mainArtifact(remapJar.archivePath) {
