Add tool interaction recipe hooks

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -45,3 +45,6 @@ public net.minecraft.world.level.GameRules$IntegerValue m_46294_(ILjava/util/fun
 public net.minecraft.client.particle.ParticleEngine f_107296_ # textureAtlas
 public net.minecraft.client.particle.ParticleEngine$MutableSpriteSet
 public net.minecraft.client.particle.ParticleEngine$MutableSpriteSet f_107406_ # sprites
+public-f net.minecraft.world.item.AxeItem f_150683_ # STRIPPABLES
+public-f net.minecraft.world.item.ShovelItem f_43110_ # FLATTENABLES
+public-f net.minecraft.world.item.HoeItem f_41332_ # TILLABLES
