Add tool interaction hooks (#128)
Co-authored-by: shedaniel <daniel@shedaniel.me>

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -33,3 +33,6 @@ public-f net.minecraft.world.biome.BiomeAmbience field_242524_f # foliageColor
 public-f net.minecraft.world.biome.BiomeAmbience field_242525_g # grassColor
 public-f net.minecraft.world.biome.BiomeAmbience field_242526_h # grassColorModifier
 public net.minecraft.world.storage.FolderName <init>(Ljava/lang/String;)V
+public-f net.minecraft.item.AxeItem field_203176_a # STRIPABLES
+public-f net.minecraft.item.ShovelItem field_195955_e # FLATTENABLES
+public-f net.minecraft.item.HoeItem field_195973_b # TILLABLES
