Implement item properties

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -36,3 +36,4 @@ public net.minecraft.world.storage.FolderName <init>(Ljava/lang/String;)V
 public-f net.minecraft.item.AxeItem field_203176_a # STRIPABLES
 public-f net.minecraft.item.ShovelItem field_195955_e # FLATTENABLES
 public-f net.minecraft.item.HoeItem field_195973_b # TILLABLES
+public net.minecraft.item.ItemModelsProperties func_239420_a_(Lnet/minecraft/util/ResourceLocation;Lnet/minecraft/item/IItemPropertyGetter;)Lnet/minecraft/item/IItemPropertyGetter; # registerGeneric
