--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 loom {
-    accessWidener = file("src/main/resources/architectury.accessWidener")
+    accessWidenerPath = file("src/main/resources/architectury.accessWidener")
 }
 
 configurations {
@@ -30,10 +30,10 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     modCompileOnly("com.terraformersmc:modmenu:${rootProject.mod_menu_version}") { transitive false }
 
-    implementation(project(path: ":common")) {
+    implementation(project(path: ":common", configuration: "dev")) {
         transitive = false
     }
-    developmentFabric(project(path: ":common")) {
+    developmentFabric(project(path: ":common", configuration: "dev")) {
         transitive = false
     }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) {
