--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,21 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.17.1
-supported_version=1.17.1
+forgeEnabled=false
+
+minecraft_version=21w37a
+supported_version=21w37a
 crane_version=1.17.1+build.1
 
 cf_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=2.5
+base_version=3.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.11.6
-fabric_api_version=0.34.9+1.17
+fabric_loader_version=0.11.7
+fabric_api_version=0.40.3+1.18
 mod_menu_version=2.0.0-beta.7
 
 forge_version=37.0.69
