--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.daemon=false
 
 forgeEnabled=false
 
-minecraft_version=21w37a
-supported_version=21w37a
+minecraft_version=21w41a
+supported_version=21w41a
 crane_version=1.17.1+build.1
 
-cf_type=release
+cf_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -15,7 +15,7 @@ base_version=3.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.11.7
-fabric_api_version=0.40.3+1.18
-mod_menu_version=2.0.0-beta.7
+fabric_api_version=0.40.9+1.18
+mod_menu_version=3.0.0
 
 forge_version=37.0.69
