--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 forgeEnabled=false
 
-minecraft_version=21w44a
-supported_version=21w44a
+minecraft_version=1.18-pre1
+supported_version=1.18-pre1
 crane_version=1.17.1+build.1
 
 cf_type=beta
@@ -14,8 +14,8 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=3.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.11.7
-fabric_api_version=0.41.4+1.18
+fabric_loader_version=0.12.5
+fabric_api_version=0.42.2+1.18
 mod_menu_version=3.0.0
 
 forge_version=37.0.69
