--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.daemon=false
 
 forgeEnabled=false
 
-minecraft_version=1.18-pre1
-supported_version=1.18-pre1
+minecraft_version=1.18-rc3
+supported_version=1.18
 crane_version=1.17.1+build.1
 
-cf_type=beta
+cf_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -15,7 +15,7 @@ base_version=3.1
 maven_group=dev.architectury
 
 fabric_loader_version=0.12.5
-fabric_api_version=0.42.2+1.18
+fabric_api_version=0.43.1+1.18
 mod_menu_version=3.0.0
 
 forge_version=37.0.69
