--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "7.0.0"
+    id "com.github.johnrengelman.shadow" version "7.1.0"
     id "com.matthewprenger.cursegradle"
 }
 
 loom {
     forge {
-        mixinConfig "architectury.mixins.json"
-        mixinConfig "architectury-common.mixins.json"
+//        mixinConfig "architectury.mixins.json"
+//        mixinConfig "architectury-common.mixins.json"
     }
 }
 
@@ -33,6 +33,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "dev")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive false }
+    // compile with mixins for now
+    compileClasspath("dev.architectury:mixin-patched:0.8.4.+")
 }
 
 processResources {
@@ -107,9 +109,8 @@ curseforge {
             releaseType = "$rootProject.cf_type"
             changelogType = "html"
             changelog = releaseChangelog()
-            addGameVersion "1.17"
-            addGameVersion "1.17.1"
-            addGameVersion "Java 16"
+            addGameVersion "1.18"
+            addGameVersion "Java 17"
             addGameVersion "Forge"
             mainArtifact(remapJar.archivePath) {
                 displayName = "[Forge $rootProject.supported_version] v$project.version"
