--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 forgeEnabled=false
 
-minecraft_version=1.18-rc3
+minecraft_version=1.18
 supported_version=1.18
 crane_version=1.17.1+build.1
 
@@ -18,4 +18,4 @@ fabric_loader_version=0.12.5
 fabric_api_version=0.43.1+1.18
 mod_menu_version=3.0.0
 
-forge_version=37.0.69
+forge_version=38.0.4
