--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-forgeEnabled=false
+forgeEnabled=true
 
 minecraft_version=1.18
 supported_version=1.18
