--- a/.github/workflows/dev_pr.yml
+++ b/.github/workflows/dev_pr.yml
@@ -25,11 +25,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Set up JDK 16
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 16
-          distribution: 'adopt'
+          java-version: 17
+          distribution: 'temurin'
       
       - name: Cache Gradle wrapper
         uses: actions/cache@v2
@@ -68,7 +68,7 @@ jobs:
     name: "Build"
     strategy:
       matrix:
-        java: [ 16 ] # Build on Java 16 (version shipped with MC 1.17)
+        java: [ 17 ] # Build on Java 17 (version shipped with MC 1.18)
     runs-on: ubuntu-20.04
     if: |
       !contains(github.event.pull_request.title, '[ci skip]')
@@ -79,7 +79,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt'
+          distribution: 'temurin'
       
       - name: Cache Gradle wrapper
         uses: actions/cache@v2
@@ -116,16 +116,16 @@ jobs:
           rm -f  $HOME/.gradle/caches/journal-1/file-access.bin
           
       - name: Setting mod version
-        if: ${{ matrix.java == '16' }} # Only upload Java 16 artifacts for MC 1.17
+        if: ${{ matrix.java == '17' }} # Only upload Java 17 artifacts for MC 1.18
         run: |
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^archives_base_name= >> $GITHUB_ENV
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^minecraft_version= >> $GITHUB_ENV
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^base_version= >> $GITHUB_ENV
       - name: Create package name
-        if: ${{ matrix.java == '16' }} # Only upload Java 16 artifacts for MC 1.17
+        if: ${{ matrix.java == '17' }} # Only upload Java 17 artifacts for MC 1.18
         run: echo "package_name=[$minecraft_version] $archives_base_name-$base_version-SNAPSHOT.PR${{ github.event.number }}" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v2
-        if: ${{ matrix.java == '16' }} # Only upload Java 16 artifacts for MC 1.17
+        if: ${{ matrix.java == '17' }} # Only upload Java 17 artifacts for MC 1.18
         with:
           name: ${{ env.package_name }}
           path: |
