--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -30,7 +30,7 @@ configurations {
 dependencies {
     forge "net.minecraftforge:forge:${gradle.rootProject.architectury.minecraft}-${rootProject.forge_version}"
 
-    implementation project(path: ":forge", configuration: "dev")
-    common(project(path: ":common", configuration: "dev")) { transitive false }
-    common(project(path: ":testmod-common", configuration: "dev")) { transitive false }
+    implementation project(path: ":forge", configuration: "namedElements")
+    common(project(path: ":common", configuration: "namedElements")) { transitive false }
+    common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
 }
