--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -8,12 +8,11 @@ loom {
 }
 
 configurations {
-    shadowCommon
-    dev
-}
-
-artifacts {
-    dev(jar)
+    common
+    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+    compileClasspath.extendsFrom common
+    runtimeClasspath.extendsFrom common
+    developmentForge.extendsFrom common
 }
 
 architectury {
@@ -28,15 +27,8 @@ dependencies {
     implementation "net.jodah:typetools:0.6.2"
     shadowCommon "net.jodah:typetools:0.6.2"
 
-    implementation(project(path: ":common")) {
-        transitive = false
-    }
-    developmentForge(project(path: ":common")) {
-        transitive = false
-    }
-    shadowCommon(project(path: ":common", configuration: "transformProductionForge")) {
-        transitive = false
-    }
+    common(project(path: ":common", configuration: "namedElements")) { transitive false }
+    shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive false }
 }
 
 processResources {
@@ -50,6 +42,7 @@ shadowJar {
     relocate "net.jodah.typetools", "me.shedaniel.architectury.shadowed.impl.net.jodah.typetools"
     exclude "fabric.mod.json"
     exclude "architectury-common.accessWidener"
+    exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
     classifier "shadow"
