--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -14,17 +14,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 
-    implementation project(path: ":fabric", configuration: "dev")
-    implementation(project(path: ":common")) {
-        transitive = false
-    }
-    developmentFabric(project(path: ":common")) {
-        transitive = false
-    }
-    implementation(project(path: ":testmod-common")) {
-        transitive = false
-    }
-    developmentFabric(project(path: ":testmod-common")) {
-        transitive = false
-    }
+    implementation project(path: ":fabric", configuration: "namedElements")
+    common(project(path: ":common", configuration: "namedElements")) { transitive false }
+    common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
 }
