--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,11 +33,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Set up JDK 8
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 8
-          distribution: 'adopt'
+          java-version: 17
+          distribution: 'temurin'
       
       - name: Cache Gradle wrapper
         uses: actions/cache@v2
@@ -77,7 +77,7 @@ jobs:
     name: "Build"
     strategy:
       matrix:
-        java: [ 8, 15 ] # Build on Java 8 (version shipped with MC 1.16) and Java 15 (iirc the latest version supported by both loaders on 1.16)
+        java: [ 17 ]
     runs-on: ubuntu-20.04
     if: |
       !contains(github.event.head_commit.message, '[ci skip]')
@@ -88,7 +88,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt'
+          distribution: 'temurin'
       
       - name: Cache Gradle wrapper
         uses: actions/cache@v2
@@ -125,16 +125,16 @@ jobs:
           rm -f  $HOME/.gradle/caches/journal-1/file-access.bin
           
       - name: Setting mod version
-        if: ${{ matrix.java == '8' }} # Only upload Java 8 artifacts for MC 1.16
+        if: ${{ matrix.java == '17' }}
         run: |
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^archives_base_name= >> $GITHUB_ENV
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^minecraft_version= >> $GITHUB_ENV
           cat $GITHUB_WORKSPACE/gradle.properties | grep ^base_version= >> $GITHUB_ENV
       - name: Create package name
-        if: ${{ matrix.java == '8' }} # Only upload Java 8 artifacts for MC 1.16
+        if: ${{ matrix.java == '17' }}
         run: echo "package_name=[$minecraft_version] $archives_base_name-$base_version.${{ github.run_number }}" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v2
-        if: ${{ matrix.java == '8' }} # Only upload Java 8 artifacts for MC 1.16
+        if: ${{ matrix.java == '17' }}
         with:
           name: ${{ env.package_name }}
           path: |
@@ -156,11 +156,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Set up JDK 8
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 8
-          distribution: 'adopt'
+          java-version: 17
+          distribution: 'temurin'
           
       - name: Cache Gradle wrapper
         uses: actions/cache@v2
