--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,10 +1,15 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "5.0.0"
+    id "com.github.johnrengelman.shadow" version "7.0.0"
     id "com.matthewprenger.cursegradle"
 }
 
 loom {
     accessWidener = file("src/main/resources/architectury.accessWidener")
+}
+
+architectury {
+    platformSetupLoomIde()
+    fabric()
 }
 
 configurations {
@@ -15,18 +20,11 @@ configurations {
     developmentFabric.extendsFrom common
 }
 
-architectury {
-    platformSetupLoomIde()
-    fabric()
-}
-
 repositories {
     maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:${rootProject.architectury.minecraft}"
-    mappings minecraft.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     modCompileOnly "com.terraformersmc:modmenu:${rootProject.mod_menu_version}"
@@ -50,23 +48,42 @@ shadowJar {
 
     relocate "net.jodah.typetools", "me.shedaniel.architectury.shadowed.impl.net.jodah.typetools"
     configurations = [project.configurations.shadowCommon]
-    classifier "shadow"
+    classifier "dev-shadow"
 }
 
 remapJar {
-    dependsOn(shadowJar)
-    input.set(shadowJar.archiveFile)
-    archiveClassifier = "fabric"
+    input.set shadowJar.archiveFile
+    dependsOn shadowJar
+    classifier null
+}
+
+jar {
+    classifier "dev"
+}
+
+sourcesJar {
+    afterEvaluate {
+        [":common"].forEach {
+            def depSources = project(it).sourcesJar
+            dependsOn depSources
+            from(depSources.archiveFile.map { zipTree(it) }) {
+                exclude "architectury.accessWidener"
+            }
+        }
+    }
+}
+
+components.java {
+    withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
+        skip()
+    }
 }
 
 publishing {
     publications {
         mavenFabric(MavenPublication) {
             artifactId = rootProject.archivesBaseName + "-fabric"
-            artifact(remapJar.archivePath) {
-                builtBy build
-                classifier null
-            }
+            from components.java
         }
     }
 
