--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,10 +1,17 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "5.0.0"
+    id "com.github.johnrengelman.shadow" version "7.0.0"
     id "com.matthewprenger.cursegradle"
 }
 
 loom {
-    mixinConfigs = ["architectury.mixins.json", "architectury-common.mixins.json"]
+    forge {
+        mixinConfigs "architectury.mixins.json", "architectury-common.mixins.json"
+    }
+}
+
+architectury {
+    platformSetupLoomIde()
+    forge()
 }
 
 configurations {
@@ -15,14 +22,7 @@ configurations {
     developmentForge.extendsFrom common
 }
 
-architectury {
-    platformSetupLoomIde()
-    forge()
-}
-
 dependencies {
-    minecraft "com.mojang:minecraft:${rootProject.architectury.minecraft}"
-    mappings loom.officialMojangMappings()
     forge "net.minecraftforge:forge:${rootProject.architectury.minecraft}-${rootProject.forge_version}"
     implementation "net.jodah:typetools:0.6.2"
     shadowCommon "net.jodah:typetools:0.6.2"
@@ -45,23 +45,42 @@ shadowJar {
     exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
-    classifier "shadow"
+    classifier "dev-shadow"
 }
 
 remapJar {
-    dependsOn(shadowJar)
-    input.set(shadowJar.archivePath)
-    archiveClassifier = "forge"
+    input.set shadowJar.archiveFile
+    dependsOn shadowJar
+    classifier null
+}
+
+jar {
+    classifier "dev"
+}
+
+sourcesJar {
+    afterEvaluate {
+        [":common"].forEach {
+            def depSources = project(it).sourcesJar
+            dependsOn depSources
+            from(depSources.archiveFile.map { zipTree(it) }) {
+                exclude "architectury.accessWidener"
+            }
+        }
+    }
+}
+
+components.java {
+    withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
+        skip()
+    }
 }
 
 publishing {
     publications {
         mavenForge(MavenPublication) {
             artifactId = rootProject.archivesBaseName + "-forge"
-            artifact(remapJar.archivePath) {
-                builtBy build
-                classifier null
-            }
+            from components.java
         }
     }
 
