--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -1,13 +1,17 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "5.0.0"
+    id "com.github.johnrengelman.shadow" version "7.0.0"
     id "com.matthewprenger.cursegradle"
 }
 
 loom {
-    mixinConfig "architectury.mixins.json"
+    forge {
+        mixinConfig "architectury.mixins.json"
 
-    localMods {
-        it.add(project(":forge").sourceSets.main)
+        localMods {
+            forge {
+                it.add(project(":forge").sourceSets.main)
+            }
+        }
     }
 }
 
@@ -16,9 +20,14 @@ architectury {
     forge()
 }
 
+configurations {
+    common
+    compileClasspath.extendsFrom common
+    runtimeClasspath.extendsFrom common
+    developmentForge.extendsFrom common
+}
+
 dependencies {
-    minecraft "com.mojang:minecraft:${gradle.rootProject.architectury.minecraft}"
-    mappings loom.officialMojangMappings()
     forge "net.minecraftforge:forge:${gradle.rootProject.architectury.minecraft}-${rootProject.forge_version}"
 
     implementation project(path: ":forge", configuration: "namedElements")
