--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 forgeEnabled=true
 
-minecraft_version=1.18.1
-supported_version=1.18.1
+minecraft_version=1.18
+supported_version=1.18(.1)
 
 cf_type=release
 
@@ -17,4 +17,4 @@ fabric_loader_version=0.12.8
 fabric_api_version=0.44.0+1.18
 mod_menu_version=3.0.0
 
-forge_version=39.0.8
+forge_version=38.0.17
