Support 1.18.2 while maintaining compatibility with 1.18, we will see if we can maintain this structure

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-forgeEnabled=true
+forgeEnabled=false
 
-minecraft_version=1.18
-supported_version=1.18(.1)
+minecraft_version=22w03a
+supported_version=1.18.2 (22w03a)
 
 cf_type=release
 
@@ -13,8 +13,8 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=3.4
 maven_group=dev.architectury
 
-fabric_loader_version=0.12.8
-fabric_api_version=0.44.0+1.18
+fabric_loader_version=0.12.12
+fabric_api_version=0.46.2+1.18
 mod_menu_version=3.0.0
 
 forge_version=38.0.17
