--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ forgeEnabled=false
 minecraft_version=22w06a
 supported_version=1.18.2 (22w06a)
 
-cf_type=release
+cf_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -14,7 +14,7 @@ base_version=3.6
 maven_group=dev.architectury
 
 fabric_loader_version=0.12.12
-fabric_api_version=0.46.2+1.18
+fabric_api_version=0.47.0+1.18.2
 mod_menu_version=3.0.0
 
 forge_version=38.0.17
