--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,18 @@ org.gradle.daemon=false
 
 forgeEnabled=false
 
-minecraft_version=22w06a
-supported_version=1.18.2 (22w06a)
+minecraft_version=1.18.2-pre1
+supported_version=1.18.2-pre1
 
 cf_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=3.7
+base_version=4.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.12.12
-fabric_api_version=0.47.0+1.18.2
+fabric_loader_version=0.13.2
+fabric_api_version=0.47.3+1.18.2
 mod_menu_version=3.0.0
 
 forge_version=38.0.17
