--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 forgeEnabled=false
 
-minecraft_version=1.18.2-pre2
-supported_version=1.18.2-pre2
+minecraft_version=1.18.2-rc1
+supported_version=1.18.2-rc1
 
 cf_type=beta
 
@@ -14,7 +14,7 @@ base_version=4.0
 maven_group=dev.architectury
 
 fabric_loader_version=0.13.2
-fabric_api_version=0.47.6+1.18.2
+fabric_api_version=0.47.8+1.18.2
 mod_menu_version=3.0.0
 
 forge_version=38.0.17
