--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -105,7 +105,7 @@ curseforge {
             releaseType = "$rootProject.cf_type"
             changelogType = "html"
             changelog = releaseChangelog()
-            // addGameVersion "1.18.1"
+            addGameVersion "1.18.2"
             addGameVersion "1.18-Snapshot"
             addGameVersion "Java 17"
             addGameVersion "Fabric"
