--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -103,7 +103,7 @@ curseforge {
             releaseType = "$rootProject.cf_type"
             changelogType = "html"
             changelog = releaseChangelog()
-            // addGameVersion "1.18.2"
+            addGameVersion "1.18.2"
             addGameVersion "Java 17"
             addGameVersion "Forge"
             mainArtifact(remapJar.archivePath) {
