--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-forgeEnabled=false
+forgeEnabled=true
 
-minecraft_version=1.18.2-rc1
-supported_version=1.18.2-rc1
+minecraft_version=1.18.2
+supported_version=1.18.2
 
 cf_type=beta
 
@@ -17,4 +17,4 @@ fabric_loader_version=0.13.2
 fabric_api_version=0.47.8+1.18.2
 mod_menu_version=3.0.0
 
-forge_version=38.0.17
+forge_version=40.0.1
