--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ forgeEnabled=true
 minecraft_version=1.18.2
 supported_version=1.18.2
 
-cf_type=beta
+cf_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
